fix double scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,11 +28,16 @@
   --breakpoint-bdesktop: 1728px;
 }
 
-html,
+html {
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
 }
 
 body {
@@ -42,7 +47,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-a, ul, li {
+a,
+ul,
+li {
   text-decoration: none;
 }
 button {
